--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/eggs.html">Egg Recipe</a>
+    <ul>
+       <li><a href="recipes/eggs.html">Egg Recipe</a></li>
+       <li><a href="recipes/tater_tot_and_bacon_casserole.html">Tater Tot and Bacon Casserole</a></li>
+        <li><a href="recipes/whole_grain_breakfast_cookies.html">Whole Grain Breakfat Cookies</a></li>
+    </ul>
     
 </body>
 </html>
