--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-       <li><a href="recipes/eggs.html">Egg Recipe</a></li>
+       <li><a href="recipes/egg.html">Egg Recipe</a></li>
        <li><a href="recipes/tater_tot_and_bacon_casserole.html">Tater Tot and Bacon Casserole</a></li>
         <li><a href="recipes/whole_grain_breakfast_cookies.html">Whole Grain Breakfat Cookies</a></li>
     </ul>
