started css work on web page created style.css sheet

--- a/recipes/egg.html
+++ b/recipes/egg.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fried Eggs</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
@@ -23,12 +24,12 @@
 
     <h1><strong>How to Make the Best Fired Eggs</strong></h1>
 
-     <h2><ul><Strong>Ingredients</Strong></h2>
+    <h2><ul><Strong>Ingredients</Strong></h2>
             <li>1 tablespoon extra-virgin olive oil</li>
             <li>1 egg</li>
         </ul>
 
-    <ol><h2><strong>Instructions</strong></h2>
+    <ol><h2 class="ins"><strong>Instructions</strong></h2>
                 <li>Cooking 1 egg? Pull out a small skillet, preferably cast iron.
                  Cooking 2 eggs? Use a medium-to-large skillet and use 2 tablespoons of olive oil.</li>
                 <li>Crack an egg into a small bowl or ramekin and place it near the stove. 
