--- a/recipes/tater_tot_and_bacon_casserole.html
+++ b/recipes/tater_tot_and_bacon_casserole.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tater Tot and Bacon Casserole</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
     <p>This crowd-pleasing tater tot breakfast casserole recipe 
         will keep you full <em>at least</em> until lunch.</p>
 
-    <h2>Ingredients</h2>
+    <h2 class="ing">Ingredients</h2>
     <ul>
         <li>1 pound bacon, diced</li>
         <li>1 (32ounce)package frozen bite-size potato nuggets</li>
@@ -24,7 +25,7 @@
         <li>2 cups shredded Cheddar chesse</li>
     </ul>
 
-    <h2>Directions</h2>
+    <h2 class="ins">Instructions</h2>
 
     <ol>
         <li>Gather ingredients. Preheat the oven to 350 degrees F</li>
