--- a/recipes/whole_grain_breakfast_cookies.html
+++ b/recipes/whole_grain_breakfast_cookies.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whole Grain Breakfast Cookies</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
@@ -35,7 +36,7 @@
         <li>½ cup dried cherries</li>
         <li>1 cup semi-sweet chocolate chips</li>
     </ul>
-    <h2>Directions</h2>
+    <h2 class="ins">Instructions</h2>
     <ol>
         <li>Preheat oven to 375 degrees F (190 degrees C). 
             Line baking sheets with parchment paper.</li>
