--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-       <li><a href="recipes/egg.html">Egg Recipe</a></li>
-       <li><a href="recipes/tater_tot_and_bacon_casserole.html">Tater Tot and Bacon Casserole</a></li>
-        <li><a href="recipes/whole_grain_breakfast_cookies.html">Whole Grain Breakfat Cookies</a></li>
+       <img src="img/eggs.jpeg" alt="eggs">
+       <li><a class="home" href="recipes/egg.html">Egg Recipe </a></li>
+       <img src="img/bacon-casserole.jpeg" alt="Casserole">
+       <li><a class="home" href="recipes/tater_tot_and_bacon_casserole.html">Tater Tot and Bacon Casserole</a></li>
+       <img src="img/cookies.jpeg" alt="cookies">
+       <li><a class="home" href="recipes/whole_grain_breakfast_cookies.html">Whole Grain Breakfat Cookies</a></li>
     </ul>
     
 </body>
